--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-PyPDF2==3.0.1
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+python-multipart>=0.0.9
+pydantic>=2.8.0
+pydantic-settings>=2.4.0
+python-dotenv>=1.0.0
+PyPDF2>=3.0.0
 openai>=1.30.0
-requests==2.31.0
+requests>=2.31.0
+pyagentspec>=25.4.1
+wayflowcore>=25.4.2
